<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/chooseAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/no_profile"
        android:background="@drawable/profile_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txtChooseAvatar"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/txtChooseAvatar"
        android:layout_width="98dp"
        android:layout_height="wrap_content"
        android:text="@string/choose_avatar"
        android:textSize="15dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/chooseAvatar"
        app:layout_constraintStart_toStartOf="@+id/chooseAvatar"
        app:layout_constraintTop_toBottomOf="@+id/chooseAvatar"
        app:layout_constraintBottom_toTopOf="@id/etName" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="text"
        android:hint="@string/name"
        android:textSize="20dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChooseAvatar"
        app:layout_constraintBottom_toTopOf="@id/etAge" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="number"
        android:hint="@string/age"
        android:textSize="20dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintBottom_toTopOf="@id/etAddress" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="text"
        android:hint="@string/address"
        android:textSize="20dp"
        android:background="@drawable/edit_text_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAge"
        app:layout_constraintBottom_toTopOf="@id/txtChooseGender" />

    <TextView
        android:id="@+id/txtChooseGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:text="@string/choose_gender"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddress"
        app:layout_constraintBottom_toTopOf="@id/rgGender" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7.5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChooseGender"
        app:layout_constraintBottom_toTopOf="@id/btnRegister">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_male"
            android:textSize="18dp"/>

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_female"
            android:textSize="18dp"/>

        <RadioButton
            android:id="@+id/rbOthers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option_others"
            android:textSize="18dp"/>

    </RadioGroup>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="52dp"
        android:text="@string/register"
        android:textSize="20dp"
        android:background="@drawable/button_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgGender"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>